upload main page 20230912

--- a/main/index.html
+++ b/main/index.html
@@ -11,8 +11,8 @@
 <body class="bg-[#f4f4f5] overflow-hidden background">
     <div class="bg-[#fff] w-[428px] sm:w-[90%] h-[270px] sm:h-fit mt-[10%] m-auto rounded-lg shadow-xl border-gray-100 border-[1px]">
         <div class="p-10 pb-0">
-            <div class="text-black font-thin mb-2">张 景赫</div>
-            <div class="font-thin text-gray-400">中国石油大学(华东) · 计算机科学与技术专业</div>
+            <div class="text-black font-thin sm:font-medium mb-2">张 景赫</div>
+            <div class="font-thin sm:font-medium text-gray-400">中国石油大学(华东) · 计算机科学与技术专业</div>
         </div>
         
         <div class="w-full h-fit sm:mb-10 mt-[60px]">
@@ -33,8 +33,8 @@
         </div>
 
         <div class="p-10">
-            <div class="font-thin text-gray-400 text-xs">联系方式：(+86)158 3069 7501 | jinghe.zhang@hotmail.com</div>
-            <div class="font-thin text-gray-400 text-xs mt-[5px]">地址：山东省青岛市黄岛区长江西路66号</div>
+            <div class="font-thin sm:font-medium text-gray-400 text-xs">联系方式：(+86)158 3069 7501 | jinghe.zhang@hotmail.com</div>
+            <div class="font-thin sm:font-medium text-gray-400 text-xs mt-[5px]">地址：山东省青岛市黄岛区长江西路66号</div>
         </div>
 
         </div>
