add animation on main page

--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,7 @@
     </style>
 </head>
 <body class="bg-[#f4f4f5] overflow-hidden background">
-    <div class="bg-[#fff] w-[428px] sm:w-[90%] h-[270px] sm:h-fit mt-[10%] m-auto rounded-lg shadow-xl border-gray-100 border-[1px]">
+    <div id="card_bg">
         <div class="p-10 pb-0">
             <div class="text-black font-thin sm:font-medium mb-2">张 景赫</div>
             <div class="font-thin sm:font-medium text-gray-400">中国石油大学(华东) · 计算机科学与技术专业</div>
@@ -18,7 +18,7 @@
         <div class="w-full h-fit sm:mb-10 mt-[60px]">
             <ul class="pl-10">       
                 <li class="float-left">
-                    <a href="https://zjh.asia/academic"  title="学术主页">
+                    <a href="https://zjh.asia/academic" title="学术主页">
                         <svg t="1694506197002" fill="currentColor" class="follow_svg_n1" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="4217" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <path d="M959.923 332.127l-424.25-231.541L64.076 326.694l471.596 266.372 424.251-260.939zM232.708 516.91v264.642s103.84 91.61 303.22 91.61c179.294 0 266.2-88.067 266.2-88.067V522.632L532.192 676.747 232.708 516.91z m624.485 111.488h55.556V405.946l-55.556 49.606v172.846z m0 0"  p-id="4218"></path>
                         </svg>                    
@@ -33,8 +33,8 @@
         </div>
 
         <div class="p-10">
-            <div class="font-thin sm:font-medium text-gray-400 text-xs">联系方式：(+86)158 3069 7501 | jinghe.zhang@hotmail.com</div>
-            <div class="font-thin sm:font-medium text-gray-400 text-xs mt-[5px]">地址：山东省青岛市黄岛区长江西路66号</div>
+            <div class="font-thin sm:font-medium text-gray-400 text-xs">联系方式：<span class="hover:text-black">(+86)158 3069 7501</span> | <span class="hover:text-black">jinghe.zhang@hotmail.com</span></div>
+            <div class="font-thin sm:font-medium text-gray-400  text-xs mt-[5px]">地址：<span class="hover:text-black">山东省青岛市黄岛区长江西路66号</span></div>
         </div>
 
         </div>
