--- a/main/index.html
+++ b/main/index.html
@@ -48,5 +48,8 @@
 
         </div>
     </div>
+    <div class="fixed w-full bottom-0 h-10 text-center text-thin text-xs text-gray-400">
+        Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a>
+    </div>
 </body>
 </html>
