--- a/email/index.html
+++ b/email/index.html
@@ -39,15 +39,6 @@
             margin-left: 20px;
             line-height: 20px;
         }
-        li li li ul{
-            display: none;
-        }
-        li li li:hover ul{
-            display: block;
-        }
-        li li li:hover{
-            text-decoration: underline;
-        }
     </style>
 </head>
 <body>
@@ -71,11 +62,22 @@
             <li>
                 2023教师节
                 <ul>
-                    <li>
-                        <a href="2023-教师节-刘建航.html">[TO: 刘建航] 教师节快乐-学生祝福-张景赫-中国石油大学(华东)</a>
+                    <li>收件人：刘新平老师 liuxinp@upc.edu.cn
+                        <ul>
+                            <li>
+                                <a href="2023-教师节-刘新平.html">教师节快乐-学生祝福-张景赫-中国石油大学(华东)</a> - Sept 10, 2023   
+                            </li>
+                        </ul>
                     </li>
-                    <li>
-                        <a href="2023-教师节-刘新平.html">[TO: 刘新平] 教师节快乐-学生祝福-张景赫-中国石油大学(华东)</a>
+                    <li>收件人：刘建航老师 liujianhang@upc.edu.cn
+                        <ul>
+                            <li>
+                                <a href="2023-教师节-刘建航.html">教师节快乐-学生祝福-张景赫-中国石油大学(华东)</a> - Sept 10, 2023   
+                            </li>
+                            <li>
+                                <a href="2023-教师节-刘建航-回复.html">Re:教师节快乐-学生祝福-张景赫-中国石油大学(华东)</a> - Sept 17, 2023                   
+                            </li>
+                        </ul>
                     </li>
                     <li>收件人：杨胜来老师 yangsl@cup.edu.cn
                         <ul>
