--- a/game/index.html
+++ b/game/index.html
@@ -4,31 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./output_game.css">
-    <link rel="icon" href="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_roundfull.png?x-oss-process=style/small_size_rule">
-    <title>战斗赫赫仔</title>
+    <link rel="icon" href="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/steam_avator2.png?x-oss-process=style/small_size_rule">
+    <link rel="shortcut icon" href="https://avatars.cloudflare.steamstatic.com/273fcc381305ec425c5b6d4f859feaa9f7a3226d_full.jpg" type="image/x-icon">
+    <title>游戏记录-战斗赫赫仔</title>
     <style>
-        body::-webkit-scrollbar {
+        #title{
+            font-size: x-large;
+            font-weight: bolder;
+            padding-left: 5px;
+            line-height: 50px;
+        }
+        #subtitle{
+            /* font-style: italic; */
+            font-weight: lighter;
+            line-height: 50px;
+            padding-left: 10px;
+        }
+        #main{
+            font-size: small;
+            max-width: 700px;
+            padding: 10px;
+            margin: auto;
+        }
+        #id{
+            padding-left: 5px;
+            line-height: 20px;
+            font-weight: bold;
+        }
+        #footer{
+            height: 100px;
+            font-size: xx-small;
+            max-width: 700px;
+            padding: 50px;
+            padding-left: 90px;
+            color: #888;
+            margin: auto;
+        }
+        ul{
+            padding-left: 0px;
+        }
+        li{
+            margin-left: 20px;
+            line-height: 20px;
+        }
+        li li li ul{
             display: none;
+        }
+        li li li:hover ul{
+            display: block;
+        }
+        li li li:hover{
+            text-decoration: underline;
         }
     </style>
 </head>
-<body class="bg-yellow-400">
-        <div class="bg-[#171d25] w-[800px] sm:w-[90%] h-fit m-auto mt-5 rounded-xl p-8 sm:p-5">
-                <div class=" w-auto h-[50px]">
-                <a href="https://steamcommunity.com/id/venusxk6214/" target="_blank">
-                    <img class="w-[200px] float-left sm:float-none sm:hidden" src="https://community.cloudflare.steamstatic.com/public/shared/images/header/logo_steam.svg?t=962016" alt="">
-                    <svg t="1695213053491" class="icon w-[50px] text-gray-300 float-left hidden sm:block" fill="currentColor" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5684"><path d="M511.104 0C242.261333 0 21.802667 207.36 0.938667 470.912l274.432 113.408a144.512 144.512 0 0 1 81.578666-25.173333c2.688 0 5.333333 0.170667 8.021334 0.256l122.069333-176.725334V380.16a193.194667 193.194667 0 0 1 193.024-193.024c106.410667 0 193.024 86.656 193.024 193.152s-86.613333 193.066667-193.024 193.066667h-4.48l-173.909333 124.202666c0 2.218667 0.170667 4.48 0.170666 6.784a144.725333 144.725333 0 0 1-144.64 144.896 145.578667 145.578667 0 0 1-142.122666-116.352L18.602667 651.52C79.445333 866.432 276.736 1024 511.104 1024c282.752 0 511.957333-229.248 511.957333-512S793.813333 0 511.104 0zM321.706667 776.96l-62.848-26.026667c11.178667 23.168 30.464 42.624 56.064 53.333334a108.842667 108.842667 0 0 0 142.378666-141.824 108.672 108.672 0 0 0-138.88-60.288l64.981334 26.88a80.128 80.128 0 0 1-61.653334 147.925333H321.706667z m487.04-396.928a128.810667 128.810667 0 0 0-128.64-128.64 128.64 128.64 0 1 0 128.64 128.64z m-224.981334-0.213333a96.597333 96.597333 0 1 1 193.322667 0 96.725333 96.725333 0 0 1-96.682667 96.64 96.597333 96.597333 0 0 1-96.64-96.64z" fill="" p-id="5685"></path></svg>
-                    <img class="w-[50px] float-left border-red-400 border-2 rounded-full sm:ml-[-25px] shadow-2xl" src="https://avatars.cloudflare.steamstatic.com/273fcc381305ec425c5b6d4f859feaa9f7a3226d_full.jpg" alt="">
-                    <div class="float-left w-fit h-fit text-red-400 font-extrabold text-2xl pt-2 pl-2">战斗赫赫仔</div>
-                </a>
-                </div>
-        </div>
-
-
+<body style="background-color: rgb(250 204 21);">
     <div id="main">
         <ul>
             <span id="title">游戏记录</span>
             <span id="subtitle">更新：2023年9月20日</span>
+            <br>
+            <span id="id">
+                Steam：
+                <a href="https://steamcommunity.com/id/venusxk6214/" style="color: black;">
+                    <img width="20px" height="20px" style="border-radius: 100%; position: absolute;" src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/steam_avator.jpg?x-oss-process=style/small_size_rule" alt="">
+                    <span style="text-decoration: underline; padding-left: 25px;">
+                        战斗赫赫仔
+                    </span>
+                </a>
+            </span>
+            <br>
             <br>
             <li>
                 <strong>在玩</strong>
