--- a/main/index.html
+++ b/main/index.html
@@ -7,30 +7,37 @@
     <link rel="icon" href="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_roundfull.png?x-oss-process=style/small_size_rule">
     <title>名片-张景赫</title>
 </head>
-<body class="bg-[#f4f4f5] background">
-    <div class="p-10 max-w-[70%] sm:max-w-none">
-        <div class="font-bold text-3xl p-2">欢迎 Welcome</div>
-        <div class="p-2 text-xl leading-7 italic">
+<body class="">
+    <div class="p-10 sm:p-5 max-w-[40%] m-auto sm:max-w-none">
+        <div class="title">
+            欢&nbsp;迎
+        </div>
+        <div class="p-2">
+            <a href="./index_en.html" class="text-purple-500">
+                English version 
+            </a>
+        </div>
+        <div class="para-cn">
             我是张景赫，是一名就读于中国石油大学(华东)计算机专业(大四)的本科生，目前在花全部时间准备12月的考研。
         </div>
-        <div class="p-2 text-xl leading-6 italic">
+        <!-- <div class="para-en">
             I am Jinghe Zhang, an undergraduate student majoring in computer science at China University of Petroleum (East China), and I am currently spending all my time preparing for the postgraduate examination in December.    
+        </div> -->
+        <div class="para-cn">
+            你可以访问我的<span class="link"><a href="./blog/blog/">博客</a></span>和<span class="link"><a href="./academic/">学术主页</a></span>，了解我的学术研究和日常生活。如果有需要，你可以通过邮箱和电话联系我。
         </div>
-        <div class="p-2 text-xl leading-7 italic">
-            你可以访问我的博客和学术主页，了解我的学术研究和日常生活。如果有需要，你可以通过邮箱和电话联系我，联系方式见下方。
-        </div>
-        <div class="p-2 text-xl leading-7 italic">
+        <!-- <div class="para-en">
             You can visit my blog and academic homepage to learn about my academic research and daily life. If necessary, you can contact me by email and phone, contact details are shown below.
+        </div>             -->
+        <div class="para-bottom">
+            联系方式：(+86)158 3069 7501 | jinghe.zhang@hotmail.com
         </div>            
-        <div class="p-2 text-base leading-7">
-            联系方式(Contact)：(+86)158 3069 7501 | jinghe.zhang@hotmail.com
-        </div>            
-        <div class="p-2 pt-0 text-base leading-7">
-            地址：山东省青岛市黄岛区长江西路66号
+        <div class="para-bottom">
+            地址：中华人民共和国 山东省 青岛市 黄岛区 长江西路66号
         </div>
-    </div>
-    <div class="fixed w-full bottom-0 h-10 text-center text-thin text-base text-gray-400">
-        Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a>
+        <div class="p-2 pt-20 sm:pt-10 sm:not-italic italic text-xs text-gray-400">
+            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a>
+        </div>
     </div>
 </body>
 </html>
