--- a/main/index.html
+++ b/main/index.html
@@ -10,11 +10,11 @@
 <body class="">
     <div class="p-10 sm:p-5 max-w-[40%] m-auto sm:max-w-none">
         <div class="title">
-            欢&nbsp;迎
+            欢迎🤗
         </div>
         <div class="p-2">
             <a href="./index_en.html" class="text-purple-500">
-                English version 
+                English Version 
             </a>
         </div>
         <div class="para-cn">
@@ -35,8 +35,8 @@
         <div class="para-bottom">
             地址：中华人民共和国 山东省 青岛市 黄岛区 长江西路66号
         </div>
-        <div class="p-2 pt-20 sm:pt-10 sm:not-italic italic text-xs text-gray-400">
-            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a>
+        <div class="p-2 pt-20 sm:pt-10 text-xs text-gray-400">
+            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a> <br><br> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a>
         </div>
     </div>
 </body>
