--- a/main/index_en.html
+++ b/main/index_en.html
@@ -10,7 +10,7 @@
 <body class="">
     <div class="p-10 sm:p-5 max-w-[40%] m-auto sm:max-w-none">
         <div class="title">
-            Welcome
+            Welcome🤗
         </div>
         <div class="p-2">
             <a href="./index.html" class="text-purple-500">
@@ -29,8 +29,8 @@
         <div class="para-bottom">
             Address: No. 66, West Changjiang Road, Huangdao District, Qingdao City, Shandong Province, People's Republic of China
         </div>
-        <div class="p-2 pt-20 sm:pt-10 sm:not-italic italic text-xs text-gray-400">
-            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a>
+        <div class="p-2 pt-20 sm:pt-10 text-xs text-gray-400">
+            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号 <br><br> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a></a>
         </div>
     </div>
 </body>
