--- a/main/index.html
+++ b/main/index.html
@@ -18,7 +18,7 @@
             </a>
         </div>
         <div class="para-cn">
-            我是张景赫，是一名就读于中国石油大学(华东)计算机专业(大四)的本科生，目前在花全部时间准备12月的考研。
+            我是张景赫，是一名就读于<a class="link_sm">中国石油大学(华东)</a>计算机专业(大四)的本科生，目前在花全部时间准备12月的考研。
         </div>
         <!-- <div class="para-en">
             I am Jinghe Zhang, an undergraduate student majoring in computer science at China University of Petroleum (East China), and I am currently spending all my time preparing for the postgraduate examination in December.    
@@ -30,10 +30,15 @@
             You can visit my blog and academic homepage to learn about my academic research and daily life. If necessary, you can contact me by email and phone, contact details are shown below.
         </div>             -->
         <div class="para-bottom">
-            联系方式：(+86)158 3069 7501 | jinghe.zhang@hotmail.com
+            联系方式：(+86)158 3069 7501 | <a href="mailto:jinghe.zhang@hotmail.com" class="link_sm">jinghe.zhang@hotmail.com</a>
         </div>            
         <div class="para-bottom">
-            地址：中华人民共和国 山东省 青岛市 黄岛区 长江西路66号
+            地址：
+            <a href="https://ditu.amap.com/place/B021407PPB" target="_blank" class="link_sm">
+            中华人民共和国 山东省 青岛市 黄岛区 长江西路66号 <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/map_img/UPC_square.png?x-oss-process=style/small_size_rule" class="w-[20px] inline rounded-full ml-1"  alt="">
+            </a>
+        </div>
+        <div class="p-2">
         </div>
         <div class="p-2 pt-20 sm:pt-10 text-xs text-gray-400">
             Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a> <br><br> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a>
