--- a/game/index.html
+++ b/game/index.html
@@ -62,7 +62,7 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(250 204 21);">
+<body>
     <div id="main">
         <ul>
             <span id="title">游戏记录</span>
