--- a/main/index.html
+++ b/main/index.html
@@ -30,12 +30,12 @@
             You can visit my blog and academic homepage to learn about my academic research and daily life. If necessary, you can contact me by email and phone, contact details are shown below.
         </div>             -->
         <div class="para-bottom">
-            联系方式：(+86)158 3069 7501 | <a href="mailto:jinghe.zhang@hotmail.com" class="link_sm">jinghe.zhang@hotmail.com</a>
+            联系方式: 15830697501 | <a href="mailto:jinghe.zhang@hotmail.com">jinghe.zhang@hotmail.com</a>
         </div>            
         <div class="para-bottom">
-            地址：
-            <a href="https://ditu.amap.com/place/B021407PPB" target="_blank" class="link_sm">
-            中华人民共和国 山东省 青岛市 黄岛区 长江西路66号 <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/map_img/UPC_square.png?x-oss-process=style/small_size_rule" class="w-[20px] inline rounded-full ml-1"  alt="">
+            地址:
+            <a href="https://ditu.amap.com/place/B021407PPB" target="_blank">
+            中华人民共和国山东省青岛市黄岛区长江西路66号
             </a>
         </div>
         <div class="p-2">
