--- a/main/index.html
+++ b/main/index.html
@@ -35,7 +35,7 @@
         <div class="para-bottom">
             地址:
             <a href="https://ditu.amap.com/place/B021407PPB" target="_blank">
-            中华人民共和国山东省青岛市黄岛区长江西路66号
+            山东省青岛市黄岛区长江西路66号
             </a>
         </div>
         <div class="p-2">
