--- a/main/index_en.html
+++ b/main/index_en.html
@@ -15,8 +15,11 @@
 
         </div>
         <div class="p-2">
-            <a href="./index.html" class="text-purple-500">
-                中文版
+            <a href="./index.html" class="lang">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 inline mt-[-2px]">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 21l5.25-11.25L21 21m-9-3h7.5M3 5.621a48.474 48.474 0 016-.371m0 0c1.12 0 2.233.038 3.334.114M9 5.25V3m3.334 2.364C11.176 10.658 7.69 15.08 3 17.502m9.334-12.138c.896.061 1.785.147 2.666.257m-4.589 8.495a18.023 18.023 0 01-3.827-5.802" />
+                  </svg>
+                  中文内容
             </a>
         </div>
         <div class="para-en">
