--- a/main/index_en.html
+++ b/main/index_en.html
@@ -26,16 +26,10 @@
             I am Jinghe Zhang, an undergraduate student majoring in computer science at China University of Petroleum (East China), and I am currently spending all my time preparing for the postgraduate examination in December.
         </div>
         <div class="para-en">
-            You can visit my <span class="link"><a href="./blog/blog/">blog</a></span> and <span class="link"><a href="./academic/">academic homepage</a></span> to learn about my academic research and daily life. If necessary, you can contact me by email and phone.
-        </div>
-        <div class="para-bottom">
-            Contact: (+86)158 3069 7501 | jinghe.zhang@hotmail.com
-        </div>            
-        <div class="para-bottom">
-            Address: No. 66, West Changjiang Road, Huangdao District, Qingdao City, Shandong Province, People's Republic of China
+            You can visit my <span class="link"><a href="./blog/blog/">blog</a></span> and <span class="link"><a href="./academic/">academic homepage</a></span> to learn about my academic research and daily life. If necessary, you can contact me by <a href="./contact.html" class="link">email</a> and <a href="./contact.html" class="link">phone</a>.
         </div>
         <div class="p-2 pt-20 sm:pt-10 text-xs text-gray-400">
-            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号 <br><br> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a></a>
+            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号 <br><br> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt=""></a>&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a>
         </div>
     </div>
 </body>
