--- a/main/index.html
+++ b/main/index.html
@@ -28,24 +28,12 @@
             I am Jinghe Zhang, an undergraduate student majoring in computer science at China University of Petroleum (East China), and I am currently spending all my time preparing for the postgraduate examination in December.    
         </div> -->
         <div class="para-cn">
-            你可以访问我的<span class="link"><a href="./blog/blog/">博客</a></span>和<span class="link"><a href="./academic/">学术主页</a></span>，了解我的学术研究和日常生活。如果有需要，你可以通过邮箱和电话联系我。
-        </div>
-        <!-- <div class="para-en">
-            You can visit my blog and academic homepage to learn about my academic research and daily life. If necessary, you can contact me by email and phone, contact details are shown below.
-        </div>             -->
-        <div class="para-bottom">
-            联系方式: 15830697501 | <a href="mailto:jinghe.zhang@hotmail.com">jinghe.zhang@hotmail.com</a>
-        </div>            
-        <div class="para-bottom">
-            地址:
-            <a href="https://ditu.amap.com/place/B021407PPB" target="_blank">
-            山东省青岛市黄岛区长江西路66号
-            </a>
+            你可以访问我的<span class="link"><a href="./blog/blog/">博客</a></span>和<span class="link"><a href="./academic/">学术主页</a></span>，了解我的学术研究和日常生活。如果有需要，你可以通过<a href="./contact.html" class="link">邮箱</a>和<a href="./contact.html" class="link">电话</a>联系我。
         </div>
         <div class="p-2">
         </div>
-        <div class="p-2 pt-20 sm:pt-10 text-xs text-gray-400 ">
-            <span class="line-clamp-1">Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号</a>&nbsp;&nbsp;<img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt="">&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a></span>
+        <div class="p-2 pt-20 sm:pt-10 text-base sm:text-xs text-gray-400 leading-8 sm:leading-9">
+            Copyright © 2023, 张景赫 &nbsp;<a href="https://beian.miit.gov.cn/">冀ICP备2023030802号 <br> <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/other_icon/%E5%A4%87%E6%A1%88%E5%9B%BE%E6%A0%87.png" style="display: inline; height: 15px;" alt=""></a>&nbsp;<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=13010202003482">冀公网安备 13010202003482号</a>
         </div>
     </div>
 </body>
