--- a/main/index.html
+++ b/main/index.html
@@ -38,10 +38,10 @@
         </div> -->
         <div class="para-cn">
             <!-- 你可以访问我的<span class="link"><a href="./academic/">学术主页</a></span>。我的<span class="link"><a href="./academic/">技术博客</a></span>一直在连载技术文章，也欢迎来看一看。 -->
-            你可以访问我的<span class="link"><a href="./academic/">学术主页</a></span>。我的<span class="link"><a href="./academic/">技术博客</a></span>刚刚开始连载技术文章，也欢迎来看一看。
+            你可以访问我的<span class="link"><a href="./academic/">学术主页</a></span>。我的<span class="link"><a href="./tech/">技术博客</a></span>刚刚开始连载技术文章，也欢迎来看一看。
         </div>
         <div class="para-cn">
-            你也可以看看我的<span class="link"><a href="./blog/blog/">生活记录</a></span>，了解我的日常生活以及一些对生活的思考。
+            你也可以看看我的<span class="link"><a href="./life/blog/">生活记录</a></span>，了解我的日常生活以及一些对生活的思考。
         </div>
         <div class="para-cn">
             如果有需要，你可以通过<a href="./contact.html" class="link">邮箱</a>和<a href="./contact.html" class="link">电话</a>联系我。
