--- a/main/index.html
+++ b/main/index.html
@@ -98,13 +98,13 @@
         </p>
     </div>
 
-        <div class="mb-20 sm:p-5 max-w-[1024px] sm:max-w-[100%] m-auto">
+        <div class="mb-10 sm:p-5 max-w-[1024px] sm:max-w-[100%] m-auto">
             <div class="sm:m-auto md:grid xl:grid lg:grid 2xl:grid 3xl:grid grid-cols-4 sm:grid-cols-none">
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./hadoop_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Hadoop</div>
                         <div class="learned-info">学校课程 • 2023年3至6月</div>
@@ -113,9 +113,9 @@
 
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./kubernetes_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Kubernetes</div>
                         <div class="learned-info">项目自学 • 2023年3至6月</div>
@@ -123,9 +123,9 @@
                 </div>
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./docker_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Docker</div>
                         <div class="learned-info">项目自学 • 2023年3至6月</div>
@@ -133,9 +133,9 @@
                 </div>
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./tailwindcss_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">TailWindCSS</div>
                         <div class="learned-info">寒假自学 • 2023年1至2月</div>
@@ -143,9 +143,9 @@
                 </div>
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./nodejs_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">NodeJS</div>
                         <div class="learned-info">寒假自学 • 2023年1月</div>
@@ -153,9 +153,9 @@
                 </div>
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./vue_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Vue</div>
                         <div class="learned-info">寒假自学 • 2023年1月</div>
@@ -164,9 +164,9 @@
 
 
                 <div class="learned">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./androidStudio_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Android Studio</div>
                         <div class="learned-info">学校课程 • 2022年9至12月</div>
@@ -174,9 +174,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./opengl_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">OpenGL</div>
                         <div class="learned-info">本科课程 • 2022年9至12月</div>
@@ -184,9 +184,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./python_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Python</div>
                         <div class="learned-info">本科课程 • 2022年9至12月</div>
@@ -194,9 +194,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./javascript_logo.svg" alt="" class="w-10 mt-3 ml-2">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">JavaScript</div>
                         <div class="learned-info">项目自学 • 2022年3至6月</div>
@@ -204,9 +204,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./mysql_logo.svg" alt="" class="w-8 mt-4 ml-4">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">MySQL</div>
                         <div class="learned-info">学校课程 • 2022年3至6月</div>
@@ -214,9 +214,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./php_logo.svg" alt="" class="w-[50px] mt-2 ml-3 mr-[-2px]">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">PHP</div>
                         <div class="learned-info">学校课程 • 2022年3至6月</div>
@@ -224,9 +224,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./java_logo.svg" alt="" class="w-10 mt-3 ml-2">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">Java</div>
                         <div class="learned-info">学校课程 • 2021年9至12月</div>
@@ -234,9 +234,9 @@
                 </div>
 
                 <div class="learned-old">
-                    <div class="float-left">
+                    <!-- <div class="float-left">
                         <img src="./C_logo.svg" alt="" class="w-10 mt-3 ml-3">
-                    </div>
+                    </div> -->
                     <div class="learned-right">
                         <div class="learned-title">C</div>
                         <div class="learned-info">学校课程 • 2021年9至12月</div>
@@ -244,9 +244,9 @@
                 </div>
 
                 <div class="w-fit m-auto">
-                    <img src="./more.png" alt="" class="w-10 m-auto hidden sm:inline sm:text-center">
-                    <img src="./more.png" alt="" class="w-10 m-auto hidden sm:inline">
-
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-20 text-[#888] hidden sm:inline">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                      </svg>
                 </div>
 
             </div>
