--- a/main/index.html
+++ b/main/index.html
@@ -277,7 +277,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="./life/" target="_blank" class="bottom-link-lg">
+                    <a href="./life/blog/" target="_blank" class="bottom-link-lg">
                         生活记录
                     </a>
                 </div>
