--- a/main/index.html
+++ b/main/index.html
@@ -103,7 +103,7 @@
                     记录编程中的问题和解决方案
                 </div>
                 <a href="./tech/">
-                    <img src="./tech.jpeg" alt="" class="more-pic">
+                    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/tech.jpeg?x-oss-process=style/small_size_rule" alt="" class="more-pic">
                 </a>
             </div>
             <div class="more-basis">
@@ -114,7 +114,7 @@
                     汇总学术项目和学术成就
                 </div>
                 <a href="./academic/">
-                    <img src="./academic.jpeg" alt="" class="more-pic">
+                    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/academic.jpeg?x-oss-process=style/small_size_rule" alt="" class="more-pic">
                 </a>
             </div>
             <div class="more-basis">
@@ -125,7 +125,7 @@
                     记录身边发生的新鲜事
                 </div>
                 <a href="./life/">
-                    <img src="./life.jpeg" alt="" class="more-pic">
+                    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/life.jpeg?x-oss-process=style/small_size_rule" alt="" class="more-pic">
                 </a>
             </div>
         </div>
