--- a/main/index.html
+++ b/main/index.html
@@ -102,7 +102,7 @@
                 <div class="more-info">
                     记录编程中的问题和解决方案
                 </div>
-                <a href="./tech/">
+                <a href="./tech/" target="_blank" >
                     <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/tech.jpeg?x-oss-process=style/small_size_rule" alt="" class="more-pic">
                 </a>
             </div>
@@ -113,7 +113,7 @@
                 <div  class="more-info">
                     汇总学术项目和学术成就
                 </div>
-                <a href="./academic/">
+                <a href="./academic/" target="_blank">
                     <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/academic.jpeg?x-oss-process=style/small_size_rule" alt="" class="more-pic">
                 </a>
             </div>
@@ -124,7 +124,7 @@
                 <div  class="more-info">
                     记录身边发生的新鲜事
                 </div>
-                <a href="./life/">
+                <a href="./life/blog/" target="_blank">
                     <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/life.jpeg?x-oss-process=style/small_size_rule" alt="" class="more-pic">
                 </a>
             </div>
