--- a/main/index.html
+++ b/main/index.html
@@ -20,7 +20,7 @@
     <div class="w-full mt-14">
         <div class="max-w-[1024px] m-auto h-[600px] sm:h-[900px] mb-[100px]">
             <div class="p-10 w-auto sm:float-none sm:w-full float-left mt-[70px] ">
-                <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_rectangle.jpg?x-oss-process=style/small_size_rule" width="290px" class="sm:m-auto rounded-xl border border-gray-200" alt="">
+                <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/zjh_rectangle.jpg?x-oss-process=style/small_size_rule" width="290px" class="sm:m-auto rounded-xl border border-gray-200 shadow-sm" alt="">
             </div>
             <div class="p-10 sm:p-5 max-w-[640px] sm:max-w-[100%] float-left sm:float-none">
                 <div class="title sm:m-auto">
