--- a/main/index.html
+++ b/main/index.html
@@ -291,6 +291,11 @@
                        jinghe.zhang@hotmail.com
                     </a>
                 </div>
+                <div>
+                    <a href="iPhone15Pro.html" class="sm:hidden text-sm font-bold" style="color: #f0c5ad;">
+                       为我买一部 iPhone15 Pro
+                    </a>
+                </div>
             </div>            
             <div class="w-fit h-full bottom-list float-left sm:float-none pl-[50px] sm:pl-0 sm:pt-5">
                 <div class="text-[#f0c5ad] font-bold">我在互联网</div>
@@ -328,6 +333,7 @@
                     </a>
                 </div>
             </div>
+
         </div>
     </div>
     <div class="bg-gradient-to-br relative bottom-0 from-[#d94217] via-[#a91d04] to-[#861103] text-white w-full h-[80px]">
