--- a/main/index.html
+++ b/main/index.html
@@ -20,18 +20,19 @@
 
     <div class="w-full">
         <div class=" w-full m-auto mb-[50px]  shadow-md bg-opacity-90 bg-gradient-to-tr from-[#ffffff00] via-[#b0b0b057] to-[#3e3e3e5d]">
-            <div class="max-w-[720px] m-auto pt-20 ">
-                <div class="text-4xl font-extrabold text-left z-[-1] pt-6 pl-6 sm:pl-12 text-[#4f4d4a]">
-                    你好！
+            <div class="max-w-[960px] sm:max-w-[300px] m-auto pt-10 ">
+                <div class="text-2xl font-extrabold text-left z-[-1] pt-6  text-[#4f4d4a]">
+                    深学笃行
                 </div>                
-                <div class="text-2xl relative font-light text-left z-[-1] sm:pl-12 pl-7 pt-3 pb-5  text-[#686661] sm:hidden">
-                    我是张景赫，这里是我的网站，欢迎光临。
+                <div class="text-2xl relative font-light text-left z-[-1]  pt-3 pb-5  text-[#686661] sm:hidden">
+                    “为学之实，固在践履。苟徒知而不行，诚与不学无异。”知识要&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;转化为人们的能力和素养，就必须躬身实践，在实践中砥砺才干。不要以知代行，&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;，也不要以行取代知，要理论与实践辩证统一。
+                    
                 </div>
-                <div class="text-2xl relative font-light text-left z-[-1] sm:pl-12 pl-7 pt-3 pb-5  text-[#686661] sm:block hidden">
-                    欢迎光临
+                <div class="text-xl relative font-light text-left z-[-1] pt-3 pb-5  text-[#686661] sm:block hidden">
+                    为学之实，固在&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;践履。苟徒知而不行，诚&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;与不学无异。
                 </div>
                 <div class="z-10 ">
-                    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/%E9%80%8F%E6%98%8E-%E5%8D%8A%E8%BA%AB.png" width="200px" class="m-auto mt-[-200px] mr-[50px] sm:mr-[20px] overflow-hidden drop-shadow-md" alt="">
+                    <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/%E9%80%8F%E6%98%8E-%E5%8D%8A%E8%BA%AB.png" width="200px" class="m-auto mt-[-200px] mr-[140px] sm:mr-[20px] overflow-hidden drop-shadow-md" alt="">
                 </div>
             </div>
         </div>
