--- a/main/index.html
+++ b/main/index.html
@@ -29,7 +29,7 @@
                     
                 </div>
                 <div class="text-xl relative font-light text-left z-[-1] pt-3 pb-5  text-[#686661] sm:block hidden">
-                    为学之实，固在&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;践履。苟徒知而不行，诚&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;与不学无异。
+                    为学之实，固在&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;践履。苟徒知而不行，诚&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;与不学无异。
                 </div>
                 <div class="z-10 ">
                     <img src="https://mysite-bucket.oss-cn-wulanchabu.aliyuncs.com/avator/%E9%80%8F%E6%98%8E-%E5%8D%8A%E8%BA%AB.png" width="200px" class="m-auto mt-[-200px] mr-[140px] sm:mr-[20px] overflow-hidden drop-shadow-md" alt="">
